--- a/Styles/maintheme.css
+++ b/Styles/maintheme.css
@@ -10,7 +10,12 @@ a
 
 body
 {
-    font-family: 'Lora';
+    font-family: 'Raleway';
     background-color: #73835b;
+    color: #E2E3BF;
 }
 
+h1,h2,h3,h4.h5.h6
+{
+    font-family: 'Lora';
+}
